```

[pipx](https://pypa.github.io/pipx/docs/):

```console
$ pipx install --suffix=@next unihan-etl --pip-args '\--pre' --force
// Usage: unihan-etl@next
```

## unihan-etl 0.25.x (unreleased)

<!-- Maintainers, insert changes / features for the next release here -->

### Internal changes

- ruff: Add additional linters, apply code fixes automatically and by hand
  (#290)

## unihan-etl 0.24.0 (2023-06-24)

_Internal API changes only_

### Internal changes

- zhon: 1.1.5 -> 2.0.0 (#289, fixes #282)

  [Release notes](https://github.com/tsroten/zhon/blob/v2.0.0/CHANGES.rst#v200-2023-06-24)

  Fixes pytest warning related to regular expressions.

## unihan-etl 0.23.0 (2023-06-24)

_Internal API changes only_

### Internal changes

- {mod}`unihan_etl._internal.app_dirs` improvements (#287)

  - Breaking: `app_dirs` moved

    - Before 0.23.x: `unihan_etl.app_dirs`
    - After 0.23.x: `unihan_etl._internal.app_dirs`
  - New feature: Override directories on a one-off basis
  - New feature: Template replacement of variables replacing  environmental variables 
    via {func}`os.path.expandvars` + {func}`os.path.expanduser` 
  - {mod}`doctests`: See the above in action thanks to doctests
  - Dedicated tests via pytest

### Documentation

- API docs (#288):
  - Limit depth of table of contents to one
  - Fix section heading
  - Fix comment in `AppDirs`

## unihan-etl 0.22.1 (2023-06-18)

### Bug fixes

- Fix for `destination` of files not replacing file extension correctly (#285)

## unihan-etl 0.22.0 (2023-06-17)

### Breaking changes

#### `unihan_etl.process` -> `unihan_etl.core` (#284)

This module has been renamed.

#### Configuration (#280)

Before 0.22.x, unihan_etl's configuration was done through a {class}`dict` object.

0.22.0 and after  settings are configurable via a {obj}`dataclasses.dataclass` object:
{class}`unihan_etl.options.Options`

### Documentation

- Add {mod}`doctest` support (#274)
