@@ -23,6 +23,7 @@ $ pipx install --suffix=@next unihan-etl --pip-args '\--pre' --force
 
 - ruff: Add additional linters, apply code fixes automatically and by hand
   (#290)
+- Typings: Extract `LogLevel` and `UnihanFormats`
 
 ## unihan-etl 0.24.0 (2023-06-24)
 
